2009-08-08  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-docbook.el: Add arch-tag.

	* org-exp-blocks.el:  Add arch-tag.

	* org-id.el:  Add arch-tag.

	* org-indent.el:  Add arch-tag.

	* org-inlinetask.el:  Add arch-tag.

	* org-protocol.el:  Add arch-tag.

2009-08-06  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-create-formula-image): Remove the -E option for
	dvipng.

	* org-exp.el (org-default-export-plist): Respect #+BIND.
	(org-export-confirm-letbind): New function.

	* org.el (org-paste-subtree): Test the kill ring entry if it is
	going to be used.
	(org-copy-subtree): Use `org-forward-same-level'.
	(org-forward-same-level): Respect the `invisibe-ok' arg for
	back-to-heading.

2009-08-06  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-table-map-tables): Make sure cursor is back at table
	beginning after funcall.

	* org-agenda.el (org-agenda-bulk-action): Make sure parents are
	handled before children, and do not error if an entry is not
	found, probably because it hase been remove when the parent was
	archived or refiled.

	* org.el (org-ido-completing-read): Accept straight lists for
	completion as well as alists.

	* org-timer.el (org-timer-cancel-timers): Renamed from
	`org-timer-cancel-timers'.

	* org.el (org-cycle-internal-local): Fix problem with finding next
	invisible line.

2009-08-06  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-list.el (org-list-send-list): Call
	`org-list-goto-true-beginning' instead of
	`org-list-find-true-beginning', which does not exist.

	* org-timer.el (org-timer-reset-timers): Use `mapc'.
	(org-timer-set-timer): Do not assign to heading.

	* org-id.el (org-id-open): Quote function name.

	* org-macs.el (org-unmodified): Turn off recording undo
	information while running inside the macro.

	* org-table.el (org-table-export): Also work in file-less
	buffers.

	* org.el (org-startup-indented): New option.
	(org-startup-options): Add new options indent and noindent.